--- a/public/styles.css
+++ b/public/styles.css
@@ -14,6 +14,7 @@
   --teal: #4ca2bd;
   --green: #065f46;
   --burnt-orange: #92400e;
+  --less-burnt-orange: #bf4040;
   --faded-yellow: #fdf9d3;
   --faded-green: #e4ffee;
   --faded-purple: #eff2ff;
